--- a/flaskbb/templates/email/activate_account.html
+++ b/flaskbb/templates/email/activate_account.html
@@ -6,5 +6,4 @@
 
 <p><a href="{{ link }}">{{ link }}</a></p>
 
-<p>{% trans %}Sincerely,{% endtrans %}</p>
-<p>{% trans %}The Administration{% endtrans %}</p>
+<p>{% trans %}Tongji DNAlab{% endtrans %}</p>
