--- a/flaskbb/templates/forum/new_topic.html
+++ b/flaskbb/templates/forum/new_topic.html
@@ -10,7 +10,7 @@
 {% extends theme("layout.html") %}
 
 {% block content %}
-{% from theme("macros.html") import render_field, render_submit_field, render_quickreply, render_boolean_field %}
+{% from theme("macros.html") import render_field, render_submit_field, render_quickreply, render_boolean_field, render_upload_field %}
 
 <div class="page-view">
     <ol class="breadcrumb flaskbb-breadcrumb">
@@ -20,7 +20,7 @@
     </ol>
 
 
-    <form class="form-horizontal" role="form" method="post">
+    <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="panel page-panel">
             <div class="panel-heading page-head">
@@ -42,13 +42,16 @@
                                     {{ render_quickreply(form.content, div_class="new-message", rows=7, cols=75, placeholder="", **{'data-provide': 'markdown', 'data-autofocus': 'false', 'class': 'flaskbb-editor'}) }}
                                 </div>
 
+                                {{ render_upload_field(form.img_name, input_style="margin-top:10px;") }}
+
                                 {{ render_boolean_field(form.track_topic) }}
 
                                 {{ run_hook("flaskbb_tpl_form_new_topic_after", form=form) }}
-
+                                
                                 <div class="editor-submit">
                                     {{ render_submit_field(form.submit, input_class="btn btn-success pull-right") }}
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
