--- a/flaskbb/themes/aurora/src/scss/_variables.scss
+++ b/flaskbb/themes/aurora/src/scss/_variables.scss
@@ -24,8 +24,8 @@ $navigation-hover-color: #e7e7e7;
 // header colors
 $header-title-color: #fff;
 $header-subtitle-color: #E8F1F2;
-$header-background-primary: #0088cc;  // old: #3276b1
-$header-background-secondary: #285e8e;
+$header-background-primary: #A3E4D7;  // old: #3276b1
+$header-background-secondary: #48C9B0  ;
 
 // panel colors
 $panel-bg: #fff;            // panel body background
