--- a/flaskbb/templates/email/reset_password.html
+++ b/flaskbb/templates/email/reset_password.html
@@ -5,5 +5,4 @@
 
 <p><a href="{{ link }}">{{ link }}</a></p>
 
-<p>{% trans %}Sincerely,{% endtrans %}</p>
-<p>{% trans %}The Administration{% endtrans %}</p>
+<p>{% trans %}Tongji DNAlab{% endtrans %}</p>
