--- a/flaskbb/templates/forum/forum.html
+++ b/flaskbb/templates/forum/forum.html
@@ -46,18 +46,18 @@
 
         <div class="panel-body forum-body">
             <div class="forum-meta">
-                <div class="col-md-5 col-sm-5 col-xs-8 topic-name">{% trans %}Topic{% endtrans %}</div>
+                <div class="col-md-6 col-sm-6 col-xs-8 topic-name">{% trans %}Topic{% endtrans %}</div>
                 <div class="col-md-2 col-sm-2 hidden-xs topic-stats">{% trans %}Posts{% endtrans %}</div>
                 <div class="col-md-2 col-sm-2 hidden-xs topic-stats">{% trans %}Views{% endtrans %}</div>
-                <div class="col-md-3 col-sm-3 col-xs-4 topic-last-post">{% trans %}Last Post{% endtrans %}</div>
+                <div class="col-md-2 col-sm-2 col-xs-4 topic-last-post">{% trans %}Last Post{% endtrans %}</div>
             </div>
 
             {% for topic, last_post, topicread in topics.items %}
             <div class="row forum-row hover clearfix">
 
-                <div class="col-md-5 col-sm-5 col-xs-8 topic-info">
+                <div class="col-md-6 col-sm-6 col-xs-8 topic-info">
                     <div class="row">
-                        <div class="col-md-1 col-sm-2 col-xs-2 topic-status">
+                        <!-- <div class="col-md-1 col-sm-2 col-xs-2 topic-status">
                         {% if topic.locked %}
                             <span class="fa fa-lock fa-fw topic-locked"></span>
                         {% elif topic.hidden %}
@@ -75,49 +75,70 @@
                                 <span class="fa fa-comment-o fa-fw topic-read"></span>
                             {% endif %}
                         {% endif %}
-                        </div>
-                        <div class="col-md-11 col-sm-10 col-xs-10">
-                            <div class="topic-name">
-                                <a href="{{ topic.first_unread(topicread, current_user, forumsread) }}">{{ topic.title }}</a>
-                                <!-- Topic Pagination -->
-                                <span class="topic-pages">{{ topic_pages(topic, flaskbb_config["POSTS_PER_PAGE"]) }}</span>
-                            </div>
-
-                            <div class="topic-author">
-                                {% trans %}by{% endtrans %}
-                                {% if topic.user_id %}
-                                 <a href="{{ topic.user.url }}">{{ topic.user.username }}</a>
-                                {% else %}
-                                {{ topic.username }}
-                                {% endif %}
-                            </div>
-
-                            {% if topic.hidden %}
-                            <div class="topic-author">
-                                {{ gettext("Hidden on %(when)s  by %(who)s", who=topic.hidden_by.username, when=format_date(topic.hidden_at)) }}
-                            </div>
+                        </div> -->
+                        <div class= "col-md-5 col-sm-5 col-xs-5">
+                            <a href="{{ topic.first_unread(topicread, current_user, forumsread) }}">
+                            {% if topic.img_name %}
+                                <div style="background: url({{ '/static/img/' + topic.img_name }}), url('/static/img/paper_default.png'); background-size: cover; background-position: center; height: 150px; margin-top: 10px; margin-bottom: 10px;" ></div>
+                            {% else %}
+                                <div style="background: url('/static/img/paper_default.png'); background-repeat: no-repeat; background-size: cover; background-position: center; height: 150px; margin-top: 10px; margin-bottom: 10px;" ></div>
                             {% endif %}
+                            </a>
+                        </div>
+                        <div class="col-md-7 col-sm-7 col-xs-7", , style="height: 150px; display: table;">
+                            <div style="display: table-cell;vertical-align: middle;">
+                                <div style="margin: auto; height: 50px;">
+                                    <div class="topic-name">
+                                        <a href="{{ topic.first_unread(topicread, current_user, forumsread) }}">{{ topic.title }}</a>
+                                        <!-- Topic Pagination -->
+                                        <span class="topic-pages">{{ topic_pages(topic, flaskbb_config["POSTS_PER_PAGE"]) }}</span>
+                                    </div>
+
+                                    <div class="topic-author">
+                                        {% trans %}by{% endtrans %}
+                                        {% if topic.user_id %}
+                                        <a href="{{ topic.user.url }}">{{ topic.user.username }}</a>
+                                        {% else %}
+                                        {{ topic.username }}
+                                        {% endif %}
+                                    </div>
+
+                                    {% if topic.hidden %}
+                                    <div class="topic-author">
+                                        {{ gettext("Hidden on %(when)s  by %(who)s", who=topic.hidden_by.username, when=format_date(topic.hidden_at)) }}
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-2 hidden-xs topic-stats">
-                    {{ topic.post_count }}
+                <div class="col-md-2 col-sm-2 hidden-xs topic-stats", style="height: 150px; display: table;">
+                    <div style="display: table-cell;vertical-align: middle;">
+                        <div style="margin: auto; height: 20px;">{{ topic.post_count }}</div>
+                    </div>
                 </div>
 
-                <div class="col-md-2 col-sm-2 hidden-xs topic-stats">
-                    {{ topic.views }}
+                <div class="col-md-2 col-sm-2 hidden-xs topic-stats", style="height: 150px; display: table;">
+                    <div style="display: table-cell;vertical-align: middle;">
+                        <div style="margin: auto; height: 20px;">{{ topic.views }}</div>
+                    </div>
                 </div>
 
-                <div class="col-md-3 col-sm-3 col-xs-4 topic-last-post">
-                    <a href="{{ last_post.url }}">{{ last_post.date_created|time_since }}</a><br />
+                <div class="col-md-2 col-sm-2 col-xs-4 topic-last-post", style="height: 150px; display: table;">
+                    <div style="display: table-cell;vertical-align: middle;">
+                        <div style="margin: auto; height: 40px;">
+                            <a href="{{ last_post.url }}">{{ last_post.date_created|time_since }}</a><br />
 
-                    <div class="topic-author">
-                        {% trans %}by{% endtrans %}
-                        {% if last_post.user_id %}
-                        <a href="{{ last_post.user.url }}">{{ last_post.user.username }}</a>
-                        {% else %}
-                        {{ last_post.username }}
-                        {% endif %}
+                            <div class="topic-author">
+                                {% trans %}by{% endtrans %}
+                                {% if last_post.user_id %}
+                                <a href="{{ last_post.user.url }}">{{ last_post.user.username }}</a>
+                                {% else %}
+                                {{ last_post.username }}
+                                {% endif %}
+                            </div>
+                        </div>
                     </div>
                 </div>
 
